Fixed the table schema in the models

--- a/eSportsTracker/Web.config
+++ b/eSportsTracker/Web.config
@@ -77,7 +77,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings>
-    <add name="EsportsTrackerEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=golem.csse.rose-hulman.edu;initial catalog=EsportsTracker;persist security info=True;user id=johnsocp;password=MacbookPro2013!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="EsportsTrackerEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=golem.csse.rose-hulman.edu;initial catalog=EsportsTracker;persist security info=True;user id=johnsocp;password=MacbookPro2013!;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="EsportsTrackerEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=golem.csse.rose-hulman.edu;initial catalog=EsportsTracker;persist security info=True;user id=johnsocp;password=MacbookPro2013!;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
