--- a/eSportsTracker/eSportsTracker.csproj
+++ b/eSportsTracker/eSportsTracker.csproj
@@ -235,6 +235,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\esports-980x620.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
