--- a/eSportsTracker/eSportsTracker.csproj
+++ b/eSportsTracker/eSportsTracker.csproj
@@ -173,6 +173,8 @@
     <Compile Include="Controllers\MatchesController.cs" />
     <Compile Include="Controllers\OrganizationsController.cs" />
     <Compile Include="Controllers\PlayersController.cs" />
+    <Compile Include="Controllers\SoloMatchesController.cs" />
+    <Compile Include="Controllers\TeamMatchesController.cs" />
     <Compile Include="Controllers\TeamsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\VideoGamesController.cs" />
@@ -330,6 +332,10 @@
     <Content Include="Views\Teams\Details.cshtml" />
     <Content Include="Views\Teams\Edit.cshtml" />
     <Content Include="Views\Teams\Index.cshtml" />
+    <Content Include="Views\TeamMatches\Create.cshtml" />
+    <Content Include="Views\TeamMatches\Delete.cshtml" />
+    <Content Include="Views\SoloMatches\Create.cshtml" />
+    <Content Include="Views\SoloMatches\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
