--- a/eSportsTracker/eSportsTracker.csproj
+++ b/eSportsTracker/eSportsTracker.csproj
@@ -382,7 +382,9 @@
     <Content Include="Views\TournamentDetails\Edit.cshtml" />
     <Content Include="Views\TournamentDetails\Index.cshtml" />
     <Content Include="Views\Home\Import.cshtml" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\Players\PlayersByGame.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
